JumpScript/tests/baselines/reference/parserUnfinishedTypeNameBeforeKeyword1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.jump(1,8): error TS2503: Cannot find namespace 'TypeModule1'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.jump(1,20): error TS1003: Identifier expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.jump (2 errors) ====
    var x: TypeModule1.
           ~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'TypeModule1'.
                       
!!! error TS1003: Identifier expected.
    module TypeModule2 {
    }
    